--- a/htdocs/assets/css/styles.css
+++ b/htdocs/assets/css/styles.css
@@ -7,3 +7,21 @@
 	width: 100%;
 	height: 100%;
 }
+
+#links{
+	overflow: hidden;
+	position: fixed;
+	bottom: 30px;
+	right: 20px;
+}
+#links li{
+	float: left;
+	margin-left: 12px;
+}
+#links img{
+	opacity: .3;
+	transition: opacity 400ms cubic-bezier(0.39, 0.575, 0.565, 1);
+}
+#links a:hover img{
+	opacity: .8;
+}
